--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://abdulbari789:Abdul%40123@abdulbari789.n2pemce.mongodb.net/deploybackdb?retryWrites=true&w=majority&appName=abdulbari789
 JWT_SECRET=your_jwt_secret_key_here
+TWILIO_SID=AC31455a8711ccbcf0ce1299bd040ac120
+TWILIO_AUTH_TOKEN=1b430eed65e5a49d38cfbd6f5e4fe9e5
+TWILIO_PHONE=+919148307343
+# VAb35cc7388123af7e99f40481f06873eb   -TWILIO_SID
