--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "backend",
+  "name": "school-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "School Management System Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["school", "management", "students", "backend"],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "multer": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "twilio": "^5.7.3"
   },
   "devDependencies": {
