--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "school-backend",
-  "version": "1.0.0",
-  "description": "School Management System Backend",
+  "name": "astra-preschool-backend",
+  "version": "2.0.0",
+  "description": "Astra Preschool Management System Backend with UPI Payments & SMS",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node scripts/migrate.js"
   },
-  "keywords": ["school", "management", "students", "backend"],
-  "author": "",
+  "keywords": ["preschool", "management", "students", "backend", "upi", "payments", "sms"],
+  "author": "Astra Preschool",
   "license": "ISC",
   "engines": {
     "node": ">=16.0.0"
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "qrcode": "^1.5.3",
     "twilio": "^5.7.3"
   },
   "devDependencies": {
