--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "astra-preschool-backend",
   "version": "2.0.0",
-  "description": "Astra Preschool Management System Backend with UPI Payments & SMS",
+  "description": "Astra Preschool Management System Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "node scripts/migrate.js"
+    "migrate": "node scripts/migrate.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["preschool", "management", "students", "backend", "upi", "payments", "sms"],
+  "keywords": ["preschool", "management", "students", "backend"],
   "author": "Astra Preschool",
   "license": "ISC",
   "engines": {
@@ -17,19 +17,21 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
-    "qrcode": "^1.5.3",
-    "twilio": "^5.7.3"
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "optionalDependencies": {
+    "cloudinary": "^2.7.0",
+    "express-fileupload": "^1.5.2",
+    "twilio": "^5.7.3"
   }
 }
